fix plex namespace

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,43 +1,43 @@
-#ENC[AES256_GCM,data:O3UOFlAxDUHhA0/8+2/YsAzQdUp5Iyies/5tnRYhcr6e3mvdHpqi7sE/AEr6eHiKi7PN3f3pvpomrY+rCKsdzxE=,iv:vVzaueCX9r3MFZRN+k56LSWdZ4h3lQkhRJk1+YzuhVE=,tag:XTDyn9BU8dmM/bnuVXVVRA==,type:comment]
-#ENC[AES256_GCM,data:FkLzc8SKKOfBe/neJHRMIKupRQ7gkqjIC75ZZYk96ikUJZlJth0igZ88Uus=,iv:6UgPvbMo6EiMPWNVfDyPnk2vlrb05U0M3nRPCz38bv8=,tag:PQraqb/72pbcMjyyT+f2nQ==,type:comment]
-VIP: ENC[AES256_GCM,data:nFR1ynJt9xrvgEKgQg==,iv:vich5o0q6JZDMMvWuor1SiM2C1A+3kmJkPUVFIMoivo=,tag:XFoZWBL991ikr/C4CUkGQA==,type:str]
-#ENC[AES256_GCM,data:TT73oEOYn75i5bwBzfyWSEEBj7iSRxr7nHnX,iv:YRrgjzkLDOg+NC7g3h/t/VO+Y1ffsX75wC4GXxZ3DUw=,tag:ty8tha0JE6IlWDmgl7qQdA==,type:comment]
-#ENC[AES256_GCM,data:gnz/TvGGn0PAiPbySQeYMgVozw3+PNL94XmF4804NtHFAjaHNKo4N7nl/REvEiQDmLs76EPfuwd2vHuf6B1BtXePTZR3wKum52W2ba/K8UAWLHvPOM5yD2g=,iv:g4Kb75GObrBy6TWjB2OFzTpk88COFsJLkNDyFjm7uoM=,tag:RE82JWdv2G0q0GXRbRaKYw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:VYQ8NHa4l79rY7BQ+Ak=,iv:126XrcbcnIyA3mBg00oBPGCEPHmYxjfph8zeD6P3rF4=,tag:TjwqMJiqrmxDjWYNsna3tg==,type:str]
-#ENC[AES256_GCM,data:1jpfdg7XHezy5dZVwhZQ2rWqVpRhSbtKSqx6BWkYohlXTg==,iv:K4syj0hOYLQnLQU4WYIakmCudUQcu68elWLfk+7Wry4=,tag:fDi2z2vX7+VuEksi2QYmog==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:yhvhFl4MyNkoAHFj9A==,iv:s4DGLtyrGjWssa51hVAQooYiuZJZYWT/J/qZM4/Zjh4=,tag:2yTlyrchC7nanB/OaUllMw==,type:str]
-#ENC[AES256_GCM,data:asBfz66Qr/PumQXtmAXQuWp5QOgHyZyP59DDY4wiPrycoYnFjdD8yKfdYfWFr1c=,iv:pyPvDAPkbrt/p4XsPRdPwzAgDatkaCKll20Ei9A9a8A=,tag:SlTbKoPfjjWM9hkn/FPhvA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:FYcpbLPhRciuuXnxGicAfshsmCXA2LWi3GVbNaM5Mw==,iv:MS/a3bEQSE6kCJR0cvllKBMiCm7jfcOZxN9CWotbRUQ=,tag:7XadB/803/pbyxwL/cqtmA==,type:str]
-#ENC[AES256_GCM,data:dA8Kf9TNxNDAP5uFj58OZQ64EZV5zXVnCZOcO4hYEp3G50wYDU8+di4WPS0TrZwR2qw6DfXm3b5iv3qdI3EKu4BZF2wEsf+t3H0ZmNXUGmUN3A==,iv:+CbfR9ayKgRVgS2f1bChhjWXpdILB9v0+HRTb8zU4bw=,tag:93UJR53wiV9gXXFksBQ7Lg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Ah36hYdgx8Tw96teI4OQ,iv:eiwR7wCuxqKQEHfEGn4fH8NDaqC/527A4BBygehs79E=,tag:C6QZ8WTgaw86zxPWSRzEiw==,type:str]
-#ENC[AES256_GCM,data:50U1F6zTEeldNjJu1bP44tmAeqUmIfDIKSpLQ5STzXau,iv:TawbsGURfCf6Ajz0z0MXLEfEgAPvWDWCiGCTIbxmnLc=,tag:73VWsqeMQ59DAaPQGJ5Qfg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:49qxZNw1/wqO2fhmmafB,iv:KGI3B1i/DFLPi3eEL43owMphnjFUq1FxzoEQyJidllk=,tag:k346b1g9TPoYYA0M25YpKA==,type:str]
-#ENC[AES256_GCM,data:d9ulfgVafKyzp86sSelKwGbmwdt4eEyKlaxsl4L9zNo88D4Hvoc2jCJtjh8YXEbmRavdLXwfApg3rj8ncAGp7c+8Whb/jwoIRRSKurWqkp8=,iv:afATOwPS6oq6qZmVYIoqV9S0GPFWyTAhLp47djKfwJI=,tag:zNAz3l5h7qC8W7kjr71wKg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:HmhGfjK/QQeWiiNLMvnn,iv:185BOiGTzw+ndv79JBquZPNOBOiTQ8qhzcnsKbK+tvc=,tag:N4n7rIDnAOTHGcSynKVI5Q==,type:str]
-#ENC[AES256_GCM,data:ClyV9Uvyr0kABz8SDAj62IUZCRgOtvzCrzBp+of3DIdOpPOcYKFFmMJx+/YC3iLBjRC0O0JhOxbxveiejobNKkPkUbgFy1hQkudWgYuMVOjXOrOGgtfF,iv:TmRtrugYIwBrNZn2OdlTmFPoNUDwuKR0WzToXB83JUc=,tag:rWlRRAQcgTF4EpOx67ABzA==,type:comment]
-#ENC[AES256_GCM,data:7oIpMC83ZFyrYtxydxy7vy7i4y6F4AzARJlEbc6+IxakEc6X09iZ/91zJ9NOUX0AR2n7Ou3LhVARQVbhnguMVYxTa/T6Tp8qEitLhqLalZUAVo2PcMkGsHvTq/YzfDGFkxJIds9M3iB1unjbYBFXH2ayKyR3Ed285wJrxQ==,iv:f2AgL1uNplDN+kAzXnJhq9yRzaZGTsK+3KEKLHSet94=,tag:BLbarrtIVncWtHherApomA==,type:comment]
-#ENC[AES256_GCM,data:UGTUAqY9faVrdkvuw1qjQZJ+EmdiEzBHoxQJk7I352dnevagIuISxURXov+AcbiS4V+ch5atrYyRyrbMWW7iCYgPawkWowLBzzOCV2lka4E=,iv:VmW7wWYQuEMhbVkPek7F9V2tw7VxWQW5iC2z6bydlPE=,tag:Te9040+oL8CQFUPjw3TlhQ==,type:comment]
-#ENC[AES256_GCM,data:NiQ2GyU+6Ygteq16xn1KrnO0nTUTUDOKMoS1iM2CRDk9uuij7/NneSx3yh5UEstMwJ3S+LIO,iv:UUO8VM2pj8Y2ZG/75Wg4lRGyHjaBSI6EW/p78FPze4Q=,tag:gkaZEcbwH7H1l7U5H9ql8A==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:r+Hb0ozRAbdNsS3k,iv:5l/hmJEHA8Aeia49rGoAAte4djjBfBv6k9LCVQvHjOg=,tag:2ayLrOab3H78P8oWkarPpg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:7TNAMNLm2YNUtaKFIk+JDAs=,iv:WJxwC5C1gJdeDbrvICkhhxRT8jw9XcC/eh0ExuyBO9s=,tag:p/UEfK/442mbtcsbTqL52Q==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:VnOF0rTniyHdm40kp8tr9WX0oe5iR8wkGVJzDsFMtII=,iv:xqlFuYEZ59Tp4jGuJaZFOwQJuZ8fAJXvx47ThWsjJs4=,tag:wYnv40siqTasujez0hu/fg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:q9Yv7C0epiK8/EdQOnVIi7lOSrbOVBeT0DedLt9o1k+9yFo9x+2GvQ==,iv:dlh6WCZFBArwpy8uAmyjTcFzkzxNOMPBf0m+u4NQJ5s=,tag:jYwdtnmY1qzzOdz2rIiTfg==,type:str]
-#ENC[AES256_GCM,data:HkwMTmlAmnmtBcvFMVHD9lV5YakD6CxiyIh3ZjYVMKvjIZ7H75Oqi23ugJjOV3x+CJf+MShpBLJB+nvN5buMww==,iv:SMdfoTem4tHq6s7GitrA6fAa1IXubGPEIej+++9CzsU=,tag:vl73xwbQKvUKNWE6B+5Oyg==,type:comment]
-#ENC[AES256_GCM,data:Mph6qMyMs0XI+/63kJplJGiieerw6x0VO5SC1ng8nX/43XIyPS+s3Km+Hr+7BK44Bq9yDVVdor4=,iv:bdxsI6V+LW5LZgTtdpX7IuEkrMJaef6YHsHB3XUxAkI=,tag:OKepWpwz4TInnkI8s8f0wg==,type:comment]
-#ENC[AES256_GCM,data:gyD2Z+on9W4LlbaLyZqhOPHTcWC+m1LUew==,iv:GumocgeqDtF9fOVfodKePI9PWlSPfRokqJWuCX7zCQE=,tag:GmC88fLTy49E37Bryom1jA==,type:comment]
-#ENC[AES256_GCM,data:rPf0IZ/sZgVA03GjIUMYJuVhAsROvRt9Cxp8VH7EXRXsQEwW07jgJQJn/VDi02qW1s7vH+cLyH35M01upm+E+3Sb6G05QdagGkaQ/nc=,iv:oZqf5ZgopLY2AayL49qnuSPht4ZKKHnfT1pg03cfr30=,tag:K1gYaQu8s3hzMTF4PLs9sw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:DJ9iUcqFCtgdV68z3nPSIUxC7Qz9WN9uK+D3CXjnEwK5j2eoEw8S1g2b8qbI0EZ9,iv:Qe7odRJ1X+d+zLt+I81hmQ/dQ0Y+ruxaOE6J9klUhZM=,tag:KjYqKuHTEFEetM9tCx5WwA==,type:str]
-#ENC[AES256_GCM,data:G1nEjEeibxaMOXC/kQ6OMPkO6OT4kExBfCmVV+9weBobn6KtoPCp0DJmRWuVrAKxtUtr8RU886wCSiISZX54ToBxXfTueiU=,iv:HENAXaf1kNbb1U3OoHl2aDtLWBLIksqNRJTIorZz8Qk=,tag:424hsn7BNpbsI+cQsy7wLA==,type:comment]
-#ENC[AES256_GCM,data:qxox0kVKrCcUsSgKqPhIcehBh/9q+oXZSHt3bQ0krUqGKyrWN3FRTH/QQaCkG5DzqF63TdkP,iv:tg8yDr+j+XBoFIvGTCZAE9WT8ZzgoyIJlijPOZBG29s=,tag:Q6dZ2Of9EWKF5NE0ULX5GA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:spgpxieCJw==,iv:q6VA42aWShBkK/zhY4Sflwe2BIv7ILubTI5YGA/Eqd4=,tag:MwRt5OPQB5u+KJI5ixGs1w==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:IQ1eXMYo4IZHcdlgdfiukjQFb+s=,iv:ez7dicyh7JlGRbz7534/zZmZi3C+m36IrD0SWYXPO5I=,tag:gsbdAJNggEX+pqNYT+w0SQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:0EYTo5ftWXpC1OU=,iv:K22TTj8r5S9PYeWKpg3FFbXWW3IpMJn3P3tObvFR1hA=,tag:XTfsyrHVW6PGMmPJS/IK1w==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:69pA4fZh89cq8z3d1OQD,iv:RosY8f06qRLqcDACWW5cP7LC3tRsF0PLeYuejadzvy0=,tag:iwxuap7+2vEQRedWZ22w2A==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:GH5cH3xXsyVsqYRhPaa6A90SSBCA90QUtw==,iv:X1nQES+UBC5FtmnCpTJrySf1AA2cpR/WCMfP+74awzk=,tag:7H4gxlMHnjQ0OLNNAcCLDw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:PcLAV0fHVglzoqgKqZjS3Riz6giR4kCF,iv:UQd65Q3md4oAq9GSs6srp5LsGNj+NsTRBTrzk6jR2V4=,tag:iNPgOfaVZBvvjCb+I73tWA==,type:str]
-#ENC[AES256_GCM,data:pcCHLYr7/2Z5Maepb+8=,iv:5ZJ8eCDLL7cxI7m/adtsIwQ3rLDZjOFshNNGX4fVXCQ=,tag:6oGIzzBAGimXoS1SzRmpKg==,type:comment]
-PODNET: ENC[AES256_GCM,data:bKuPIsymdTHCEKJWdA==,iv:HoIQbryrFfjAihCNIoNgptAN2nbO2Ht3SYtyBVXbdmc=,tag:hrpmKeh+R3+2sAWWDDmSDw==,type:str]
-SVCNET: ENC[AES256_GCM,data:za0Hm8xGiC3q1RrltQ==,iv:MiquVwtOoCD096pVv84t7TD41vFVDdIpFMKxc3SVNr8=,tag:zkBY7tS6ytNtJjzDrlYeEw==,type:str]
+#ENC[AES256_GCM,data:9cjk/PV5Q3L12xhRMDVZLovMfdZt0CT4kl2TX1yNTnrUaXvZoPVMojnhW8j9oCgbqUmoBd5o7dcGM6+g8Pzvi2g=,iv:IbiP7z4mDhOTvnNmfOPO+JgYswxNCUXGEGuF07/lT2I=,tag:gBpE0T0RFmKpXE+yomwaHQ==,type:comment]
+#ENC[AES256_GCM,data:nsExPlrip9ISRL1pOSmb/tJgPxHdApmYixXvWv5X6gqDukSYsLVqYXNu/rE=,iv:lYPJBukaVRVZT1vZPoRD+xcz66bMd9Gs5dEqaMGXCtw=,tag:TagD7SszCgLG/73zpIuIkA==,type:comment]
+VIP: ENC[AES256_GCM,data:Z4LLARdahlvrLR5F+g==,iv:3yOe/8uQuEZjsPKTNLlHwxzzT7YlTCVdjkXpw4bJHjM=,tag:3gj/Z43pfZvKHhPlMyFzkw==,type:str]
+#ENC[AES256_GCM,data:VmiS9RX9pkbVZh8hIVItzIBzBD8T0vhAls0w,iv:fvRff10iMtFBsCflj4NGIiOKqWOKDgbT/vFYDKvqwMs=,tag:Y4XhyWfZ0bBq4tXjdTwagg==,type:comment]
+#ENC[AES256_GCM,data:NUPAYd2xExSExGpzLyVN4MProvVdZla8bGPCnAjwubeHu8ppi8tUCtBS1K1g2+cdEXVe15j4U4DYH2hiGX/nTbDjyHe62RXR44YhARSfQlayEgFkxHDtgkQ=,iv:lj+uisBxL3vQHuRgQpse9P0626R7YVduXR1KfKse/F0=,tag:kVqjb9Ee9uSOi9PsKd8Meg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:HCv8I4TQou8rb8uC1fc=,iv:JLOyQ2+XEpm3aCKQ/Z3RYLo5swr4H3gtPsDz/Z6GWBg=,tag:7TgIaUzggCHPZXOMFTYyZA==,type:str]
+#ENC[AES256_GCM,data:DrjMLLFmr7woqjwCD8L4kAIGxWPWIwjcdct95l1SN2BYgA==,iv:bCxkeGSq6k3hxePMDvFN82F/jZOtXBMQjsNy72quJTY=,tag:RWjgooq1/BKj+aXngsfuNg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:dQ0zuHjeA8r6076s4A==,iv:OfwpJTvwTIA0TGp0scymaN9A0i8qZDKWxYWE4LLMsaY=,tag:k2glI6l/FMYrXieoaXjJrQ==,type:str]
+#ENC[AES256_GCM,data:2u7KxagjTFsWhT1prG4AqJ4rNwwivcs+nJZ8XtF4Am3SZbgSrePEz9N4RQN2sGY=,iv:XjATDhkMjLd3ugJf0916Fq44fZ2Geu5HmUKj1yWSP0A=,tag:goixUCe4pnZ/s0TSFMErOg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:d7Hs74aQb2z643lXNFJsyFSp+IhXWeyFeEIcxkIccg==,iv:YcN5e7mtfuMAJyXgX4trlg5N8FVKDIXbPfuD4s++IIg=,tag:ePt02hOF/L/Pn0vqLGnRHA==,type:str]
+#ENC[AES256_GCM,data:mrFblbLbFAi1BsbILrBpXzwHs5zvuseF4XRGK+9SQduXr7wLsyf99tfbpyWRVIV/hchZmhbVYaRfQySiBSJ1wOioHdYuVslvC+tH/Dwss1Nr3Q==,iv:zqvOLFF4FwiyGpLThUJZ0dHGOVC0+aW/xcazH9dH46U=,tag:vqzOIIijM6+1fYgCYACECg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:Slqezc2OLpY/d5ws4IRC,iv:Ey3/h6Usw2lmIr44Jdx2W0UsOGVHzidSQGz1wmjweVc=,tag:1MX/isprMhu3qJlNtJRTMg==,type:str]
+#ENC[AES256_GCM,data:fhLywRwesS5QgyrZ8lCN2kvU2hXChaJuEBv2lsMCKXzx,iv:0VrMJtuL0A/GDBXXz98lfr+UXDYISHfCMZ1mvsKDBAY=,tag:mH170Oy+fIZjVIBOYDgbRQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:l2wGaoJopDqoVc+WKiCr,iv:OmS5AxqrtQYkxIRZq7O2l2Km/VwLq5UoDlHX7FQGVEU=,tag:tt54xM3You3/2Ai2gcGXyQ==,type:str]
+#ENC[AES256_GCM,data:VxsxCO2KyWTIqfT2B4IS18G6skXScZ5cTKrbWKWY33A34PyYQmbtvsZ1bqKmlt2t3G9iLQqDdOc51tKb74JkFav5tBlRhr6XxyVLe2Wg32A=,iv:uuGQKkZtevyKt+VUgO5yvwCd2hvOTSomAH7N6Z1xwks=,tag:1+wGEOGr+SSpXDzzyZ+owg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:gKYyZheB76GsdRQIJq+P,iv:dB+fnEWXVFo1Y908wKMOAW9ms4DSYu/wXE6i2C1M/pM=,tag:soZTVC4JETl/g6giACmvcg==,type:str]
+#ENC[AES256_GCM,data:DogaNrtedPXXxPdg6BSM8h0vfNl4AD0Y+adW0pDZP3/0Yy4Wz9mHgKVpzuQVt2NiwSlw1KWA1ER+PjfKYCRDhAOgL1e2Z5eY44DCBWk/oHLGEvMg27zT,iv:rl1Xf1TiXkr7JjuX4/rMXUFXiRPEAWLJrmmP2q6ZVbY=,tag:YlTxF7XPCzCTUBi1/JRbgw==,type:comment]
+#ENC[AES256_GCM,data:HkdVqfmku3h2UbXpYlQ8xkydiTxltNef9sjos8SV1Lw9qebNQEfStltNxGDufaTBEl/D4hUe7+UWdMhQs1bh6d6U5X1poG73ZPSVQ0qa5LGvMmzpnWeyEhNhG9tGBQDARYx7aWEr9xjK3MgsFjQLaCquIRx6Lxm6qeTzmw==,iv:plRNB7nY/IL1uUrCZsc/1u2lTSZCmh82ej3voJ0K4xA=,tag:5t+rt5wYUJibuvTesWXnRw==,type:comment]
+#ENC[AES256_GCM,data:EIXYWdwi1Z5QOV65s5eSR1fUCbNTXSqbvS6M+6NVRV/aDIfc5gVAebwq8hLHehDvhRGrBymU5a6z0/6sR15Q4O074v7WLUg2zUgbeYUHLls=,iv:RzCtJrCWO3EOe6YqylOwnXBMns5m791TUzwiK3C9/mQ=,tag:kP6Oxithb97vXGP71AZvkA==,type:comment]
+#ENC[AES256_GCM,data:4Su/Xh1pe9GY8M2XLsa3Uai9KXLQqUqNzUzcsTNDUxHyYx1xgycoNQp5TWG0haYrDRDs7EoI,iv:ag47K3UWmxuaZCDmeYSDleNhw3VQ7OsT4jSODJcQKDE=,tag:5iBRNBvgBoZgukTDM5qZ5w==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:kD9uDpAzDjIv18n/,iv:oqH5cb+19IdUgpPOWckpidHmxAsEaZ+/UcNshOXMYZk=,tag:2BYmrbAY4nvOh+rKwVQnQA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:i0lFMSbwoFRF1YBFDMYicfE=,iv:aMm2EdMMD+aW/UYTARNlOf96LMZh3qzXTCsOcm6gsKw=,tag:WQrj4HKvvRA16CasDkkXtw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:xuK9lzkxTVSvku1YW1It/TcAtRZ/jt95TiyhEvnkktc=,iv:qifFraXIBDKfQIHBWcz7lsZ/TpZUs6IbjwBLKERfGkM=,tag:jfZsDKgHUj7HOB7zMzapSA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:wRJaYSRdpAGcnizQ03ZOu0ECeSYHsk3iFhKNxjGpZsii4N3nweT4Ww==,iv:r5g1yLZGwSFqJtt5N5Fk2hbvUlQaeRYYS7lNcbJBlQU=,tag:ejCVcqxyTV8H1RdYMZN81g==,type:str]
+#ENC[AES256_GCM,data:Zn7b7/B14Fa83TnhZ2TWMfsm9haGQ/sAR1Lb8K84JC1WoWn6vUR8/JAfHINkqqEucNoOAS83spckSp69ChKpHQ==,iv:z1rvjAJAYHkWoNGu2ADWpS0+PXgd7XgcBOwDnTNhunk=,tag:VdlJtm7o/iGpWZDVc3V4OA==,type:comment]
+#ENC[AES256_GCM,data:Sccw8Ff2/rO4gIhElBTzUqNq1xyTtclffqsJVlrb/Ov2YKF/DiLZQhWv04gGD8pHGxvLgjyEYEg=,iv:sNJy2DGebOlRYeTrhJlPxGZY7B4vJBXuZu55lqHh8Uk=,tag:cLNXcU3+vk+WhZwYaXb8/w==,type:comment]
+#ENC[AES256_GCM,data:yc9c1R/s/zZvIcxFDpsQ18ryhX+TVZcCJA==,iv:lJuUIq4jaH4SfAWgxp0LtKT4T82+qbYP/o/v/8C8BUc=,tag:Gf27U5IzaekQQk75kUG2XA==,type:comment]
+#ENC[AES256_GCM,data:wosiMhdfahu6ITL2y25PykrZI9D6V7ZL7orAEEnVodGydb/Cb92qPBfefbJouRYhFN1vs8EfmzTfGd0zPqcUsceCg5b1j48+6cOOKnU=,iv:iNcKhTMrk6SxSB9ZX7V6aiPmT1G6ZhnlL5smxRdRvQk=,tag:QgyT06y+TxdxORTr5LHCLw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:JLs0K7lbIkL4c1T+i8HASj7rWjCIV4HoxAvP5cSgayEIHCjhYANAiTyNNCeMUWxK,iv:qgsFgiGcCaW4ybsr3UVbgOa5RXpBgMnZlNc/jbZ4HaY=,tag:64WcvxioEB00iaikaeiTsA==,type:str]
+#ENC[AES256_GCM,data:JBP9kTcK/8zBMvFYDPbO1iWFr34lEN3LZSh1NQawalpUw69oVvems+g3MCvwa8BWaS7JbT5yaIdtEFvKv8IEGcWxwACqBVA=,iv:TzjrGpH5N5vIRn/I0BpH6MASkeTUjqFCNjhC9IQHE5I=,tag:UJqooDh4ufw2H2Ehq0mBKg==,type:comment]
+#ENC[AES256_GCM,data:+r6nnGldlVdYmWiCxTqSqD9N1m4DawP/LO0bFHWw3mx2DAxnZPZeDTGpEi9ogu9TA5p6dUKk,iv:3doZe8uGN1KBeW3siYg8GkTUiBN+s+1kzQG6S63L5x8=,tag:HXn5kB87kqPkBOxbmp3fQQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:XTf8VFLtVw==,iv:jaLAf+Uu3hZresFMgVhstFoRhk51Kdr+P6JdFzuhGFU=,tag:ct6nFuqQifzWObjM2dkkhg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rgOMwogSgwmZo+kZnjfl+dOyJeA=,iv:sAIX/trZ0xfiSXGpzuGTWFIqsyk8WU2KMKC9KMXo65Q=,tag:/wqjenugAyErmtJWpSWn5w==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:aS3jf3ESqSOUkO8=,iv:4/CxYS4+4mkk9YRaztsJ6YfFwGEbgTWJtHjUjN6IXPE=,tag:jdbfGyYZSEUYPB7dKqkTBA==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:z3dqKnoifdTZjUv51+lR,iv:SJ/qepzGtS9iBLIRWqse1lVTd0NyXsKAvgAp8+OBEp4=,tag:1mEwDf10Wjmc35KDvNQE9A==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Brl7PbJwGCZVSfSVBySM7udnJLMKRQccvw==,iv:iHMjENNuQZNzvzEtducW2rf1t4f+tCkypIZr6yYFNPQ=,tag:XjAe9Hc4XwukP8JHmJcNWQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:zhg8vywOFi89VvjSHJD5KIcYY78ZL7tM,iv:C0Zboujsjf8sVpQwaWIAa9/Z0IeU+QNAMdviFx6MKoY=,tag:vTPH9LfJRaDo5jBuDbnmZw==,type:str]
+#ENC[AES256_GCM,data:zQmh4K4EulTW7BoGA/g=,iv:5MgcudRBVKsKi0wEzEvQXt7C5oSziSIgzzmwW0JTlpg=,tag:vxF0nmxFiHAZugV6UddeRA==,type:comment]
+PODNET: ENC[AES256_GCM,data:DgArjtcR8dsYiBDqOg==,iv:LJHWjS2YifjqkfTKtgw6koUiZ4O2b+PgMEWas92YEKw=,tag:Wx1SGY++0H6alZZiEmPu8g==,type:str]
+SVCNET: ENC[AES256_GCM,data:XmKWiNhjKNcwkMV9/Q==,iv:d7GBVCvv9Pazbldn1k7BhlL2Qd/KcccbV1oGzmbeG4c=,tag:cZHKy1sTfluA2NrhkccsdQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -48,13 +48,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvaWtoRVdkT01MMHZaOWRL
-            Y1MwQ1E2a2MzbCsxczBSalF4eHF5SVRuWG5rCkg1eUdUbnUvU2VoOGovUExIMHlG
-            cnFnb0FYdlBmWXdtZGtiUHVlTXZhdVkKLS0tIHJLMktuNkJlbzZlNjBLcloydHd6
-            Z1RFejdWYkFGLzQzR2xUWnl5V2pWMTQKaViPDEqldywCywoKDOxT/HdLCIeGhm+P
-            NVlwTobmQj0bjp1zPVno3ezWwHDLMZBINKO6CV9+j1EO+5OR1vFY2w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMUnlFOXUzaDgvSThiRytP
+            N2JjcTB4ZGVVRi9nd3c4aEh0SzVnaTF3bVFRCk5xUk5adS9PZHhWcEdSdWZ4eEtX
+            TWRadm5xdHJmOC96cER4QldvTWdoc0UKLS0tIG9IajBRTmtTdzJWam54TTJLOHpz
+            NmdGdUkvcWkzemdPeFhqUTdKRXBhMHcKMvJ9ig7jjdMGSZ+RxjmIJqtanjlBQKi2
+            dJpWW6IxmdDzBMUkbxyO0PXKti9KY5S3wfr6SP3b7H1iNc6HWoEO8w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-05T23:38:39Z"
-    mac: ENC[AES256_GCM,data:a24xgwx8TXjOBpYwBYGnqBotmPLehtBVc0AYV1Z14x/JHFQb2WR9/r0JKyZA5FChkbiMTZKggK8af3nrmxzduUWq6l7kTqXxi5ZmXDd3jgNtK657bXOJx6KgTC1770GnwRtCEjnneHlH2sCdTlCW383syvZKvRU6ObyE9cZhDNI=,iv:jfmxymsQVgPJ2REplRxS4jCruBJK6+0FV9O959Z4Yl8=,tag:FAvwsFsKyCfmFj/kJVRv6g==,type:str]
+    lastmodified: "2025-01-08T22:38:18Z"
+    mac: ENC[AES256_GCM,data:VWzqjHzWiqyit7d7jjA2rspnpURwStgRoOHXq6K+LvlObxpkccIjP4Xuv3mxsm8PiwTm617b05Kw3Htb0t5qUK6asC1LV0H/u4oGDeccxplLGDG9zma6C2a4PuYj86XX840iFs73OZ2HzOZy9snfWmfTgqkVtaYc43jgym3QGFY=,iv:sE2nAWYNJ6xnKjf0rBOlw0VumCqGw3GpR0Dmx8ON+VY=,tag:2Z1Wz//+KFVX3OSpZb5dtQ==,type:str]
     pgp: []
     version: 3.9.1
