--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,47 +4,47 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:AP+u9uWTHrtG+mYFPD7MSD2F6OPCMcnoGBupq2n/yvdQ2lnx9sKlA+jrKKRzQQN439/mITd8wqKFxoXvtUejpZs=,iv:xr0CBc+h0rxeBc6RIJg9WgiwAnev4pRLU0B39rx2Ikk=,tag:YjSprnHPBXiU/5lOque8jg==,type:comment]
-    #ENC[AES256_GCM,data:1LNfrDRv4l9x3NWUglTQUDMCkPdtiO81OgBwNIZjrSYpANCJ+9QlxAgdul8=,iv:x7vzZ9goA8l+TYgCjG62160U/guNQhW+sraYMYB7144=,tag:IozHOPxzcA1fSgs+wlbdCg==,type:comment]
-    VIP: ENC[AES256_GCM,data:BaEIPQ+s59wt1QX/hw==,iv:nhMxkoPXpQH7Mvsv4Vu+oO7zKOw7dc+c4EDX269tdzs=,tag:MxS3/2puYJonKo+d78Qt8Q==,type:str]
-    #ENC[AES256_GCM,data:HTnkTLPHpD0ikeCM8rAjAdvGnI6ksQRA11+k,iv:60XBu17I8cb09BUAC0PXEwVLHuq9CHZFON7zCB4iqFk=,tag:ljpp3EzaMVaKJuOL28WnlQ==,type:comment]
-    #ENC[AES256_GCM,data:+wRzGXxz0pRLQ0fL5aPbJAjOxjT2BTKmNHkuL4rFBUfuxtdzXScCdGDTp1drOUlruUjIBNLQ7hPq68UlgT3bU+7Goh1pc5hrhU8cSdjPjTe+hy6MY3xv4L8=,iv:93OHeyrU/L2diDzw8tWCIP0O5VjKyZxGlmfBO3uR4jo=,tag:+ltzobYjghM+S9IUm5cgOw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:FHShrcVGsoAAziHoCkE=,iv:avLBku4BCOTLD9OmRpM5CivqPwpwgTisjTY/YXCoWmI=,tag:EaxTEFaNn+kHIegZYoOh7g==,type:str]
-    #ENC[AES256_GCM,data:72Y7fma2iUiTJs+1qRCVItRsXOEEEIJq0hIye/QFqYr/Aw==,iv:gekwkYZkARMOQ13Oql3zOn9FM7YiNimhC3lcZk/nO4w=,tag:mwIfltVhutHdS6jSXMoUjQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:6/fyfHaWn/5YGlOd0A==,iv:MJiZS9siO3+J0ieZR0SwVBjQHfPyeczF5GCaw3y/WFw=,tag:o6IDPTu7/LbEp3vfniCaKA==,type:str]
-    #ENC[AES256_GCM,data:pSXIrA94wZKF56rzaC+GWa7dBtruz1kGBcQJTHE/w8Kn3BMOqPvc/kI3kWrrsAg=,iv:3TCFT2LMEvJQXmdKMmixpi7wNvF6KyceuegePJ2AOrU=,tag:AGUNvxpdCJjLn003cXzqbQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:d/PyLHOlBq2vscq0D8q5S1jjp4ru+CZy1McEpQYwxw==,iv:tqW+jHo064JdtEwXoOxvlpiTYXqnV1o/BC+tE8W17Fo=,tag:Ou/MbDmFQdx448a23eYFWg==,type:str]
-    #ENC[AES256_GCM,data:CyyqWgajJeWQwF0yjAkZOtDAz/N7f70JeT1FQaIk6NyJHM8Cdg8D58KlfTrSAKYLn5RcYzo+sLIRM8Px5ohjkCGh8kO/bRf1FkPzeDzu+1uabg==,iv:XwSedcIydjyFkew9bW+pV+57+xrf6slaI+IonHsqcc0=,tag:9SvPbK3HH8+XrTyXTsdbFQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:BiE+aX6auhlpPsPrfeDm,iv:mM8nP3GRBXD5ArEeJvF1jW2EyNPydmO5+e2AYYTmsTs=,tag:5yURLL6ClmmHBkCXCbDy9Q==,type:str]
-    #ENC[AES256_GCM,data:zEtv2NLmWRlfSuOlIPyAWt21Xvc4D2DdVVQHyIdLtpqe,iv:Dw6qDLsGjtd7xrtnLmXOujNJaQ74yS2//x1LxcMgicQ=,tag:NN5J2onAJZLR0ZUTzubQbg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:w3oE36SG8eFKu6eMlVwO,iv:NnVSLoiKR9jl/OnNxEydVzgt2KrYMSMOMa/RuB16cMo=,tag:zDsur7tQONiuuPTHjGSmDQ==,type:str]
-    #ENC[AES256_GCM,data:WodLO5S2sj85FDVqdDQsXNqwfxyKaL7i/6fRchVh96XEw0jIxX1u9MNVpTv54nUq7VSdXToJIjKJfr6D1hOLzhYDEj8gISubKDcJRpcPxsw=,iv:4ZEmoC7TOfDXAx8neAZZg3wL47RAie+rjk5ZmWP0A4U=,tag:qwy/bXMbc+vjihyalI/XWQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:sfC5U/nzlmWrTYsU4cTP,iv:CuUVg6XDm9d/eMU3S/AMDtgv+5jFZCSEqZmKbWvlfNY=,tag:QwqePcMefYCk0V1YIMCRUg==,type:str]
-    #ENC[AES256_GCM,data:o5SZ1VKAopJhc2X67WzsH6FJQer2CnXazo8xYRJaH2oirCcV8p1eMOeQruPDC6xcoGIGv+OvGH74hi5gjYt74emb6lPtgfSRU5fnnAX0DzIMpPVe8dCy,iv:vlsvEmd55wCDDibasITMbW6Aj8ZcvB63uHO6qNgCtX4=,tag:943ANmtiyl7dxhbBDqcyog==,type:comment]
-    #ENC[AES256_GCM,data:lhxXplZgLBo0ddwNbolzsZAkmXpuw+ASFSP/ccx2+EPJkw6c5FRCWACj0saIg7q4zdY2DGI8tsAz5xbgSV7D5S6Wrvc/U/fRPTpvrmFYz2hg8xMUSHsC1fQrmAMXl8moDNYsrTXeuJC1ULeh0pmJdxcSRi/DaxRLs8ECPw==,iv:Jeczg0lWdDZZNQLRf2MULH3D0Ko7NxnRPqsse2/RQhc=,tag:GNF3dEWxhLQGSvqPDhpggw==,type:comment]
-    #ENC[AES256_GCM,data:gzV8wqYlX//zDFxq1CRN94g7Yhhy3QsDSzdlSsU29UJJhWwqdh6iAagGOSleT9a9U6dR0W9KKkBhg/i8pQ8JrjB3YgNVDYJQW1jdvbq49BY=,iv:F+rKqQt6o9Q4fgHYI94ztCiRtB2OTswRZtJiugPLJVw=,tag:AwbUy8WeSxf++Jf2KlE+Cg==,type:comment]
-    #ENC[AES256_GCM,data:eCG5ItZPIaOG53wUCj6D6gY1guF3H6suA9FogzUuCUyJ0eP5nzd++b6pn9tD0t64m747tWjE,iv:Zc3YjJi7zCpCcAFcho49qEci3YP4EHfLvs2SrJHT0S4=,tag:n/XQNJRzMYfbm4nyU9P+EA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:P+EUC3pAKG4lIfby,iv:mgnJJDG4Y3p1EXLDLpnfx5FBvGr70GZiWRO5uo+EP20=,tag:oV16bhZxqZHl9v3T7Dzlhw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:omkVb1XzwxAiJU1PGiqjtEg=,iv:DfoWitSLg5CYmLXr7DFVUOmMidGotgPP5i0fNMGVA5E=,tag:HxrPqXQ8610iZGm5jvH3Lg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:wjIxE1WWE91npppKpBBFOVYpGtYM/bycu9piQ+z4TgA=,iv:AjMFed2hHPx5twZ86591Uqa0q+DQJX9ZWQx118vNmtg=,tag:W1tbHCcaJ2DebkRdkdZs+Q==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Nix0f15TBraaPAyHjstg0aKCWbrZmStsOVqdyf8pQTJtZBsC4PdzZw==,iv:qc+CIDqX9kYEKc2ER6is9coP5WVspwYDjFitzZVRBmM=,tag:yj8+edwwPocDI7WQo1JMZQ==,type:str]
-    #ENC[AES256_GCM,data:fhij2rGuUEnyd3ZhCMUZ0ohtPYG4KpWliou5AuLfBhiYDr764H+P0WgWzmW1DQSuE5t65ep+8bUhkp1trw5Tjw==,iv:7etzNQVyNFbNhXd+Rbajrtb20fDlonEnQO+DwMchyiI=,tag:wrG/sW4LZnahuCwpI8v6yA==,type:comment]
-    #ENC[AES256_GCM,data:MYRYrUBIPqgfKzoLKFDzPGgmEYSQJ0qWIZY79HL/FXRK8E11XrLlxun/li+6sqFyz35U05kmHJE=,iv:wBmXimmCQ05borY8rLi/aEOtfDQYFrFeHdP6zQl0NGo=,tag:Y7hHjj6NzR86yk+emulr3g==,type:comment]
-    #ENC[AES256_GCM,data:0sF8ugiQnA1lUOu1602R3kkrobXt3sF1ag==,iv:jakpySTsVzfCEA2FCnwUzgNKgzAHE/iwQEdWBUq3Qzo=,tag:aGSyRu9waks444DInPiYTA==,type:comment]
-    #ENC[AES256_GCM,data:VV3hKbmiTqERKAMzBQK5s5l9qFVXr12Cc/G+SY4FOeLLrIzZL/LJAe8wvVvRIe+GDRINJqM+o/qVOrsWe+MnAf669FbH5TnjXk4dDIw=,iv:VsMfT1OpJ7HsD2XCNj4LAmXE8WF0i7khwibqB9gIWWY=,tag:if1I/yIC8KABChr8pjhdow==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Wi91q1NrDvPnCAX4qTz8f7gyiRvbAuAobyaSrr/D7+M6f5Pcg8FdlKyh2E+wkTuE,iv:IGpT/pFAj754ZcRO5k2b5+Rn+iCfPEKHmJHOQCLwIZ4=,tag:qeZj6rqsIuma6SJEFp7ZCQ==,type:str]
-    #ENC[AES256_GCM,data:yYivkJ2bBhWZ9NwOLnPoNrjMEDnY59Kquvn08ER6DeqzyywaK5k03/pswBMFbBhTwI4IDgEr3kdAOepIQ3eKLqzQi65eyMA=,iv:xZ3oQLiXcdpakvHJ7BaTpLIDxwTNO9LXYsXV3HO7QUo=,tag:qLIy1+9pxajrA4T2DV+Utw==,type:comment]
-    #ENC[AES256_GCM,data:Z1FtsC7YCwXtl/J7KD23L/CJaV7HwMrgleKpVQdHm+ER4hpT1I2VMve2fczdl0kcik6TB/pD,iv:HzSbU2xRvJcQfvsSGN9IJFbKGU66rCaQVN9/8Rgm1Yo=,tag:iTr2NMPFwDGlcqMdJbjHZg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:bIUwrU1BCw==,iv:WaDWylle5VuOhN9LnT1F05BqBWnuBut43u/WM4j/D6A=,tag:PkFoRz+HwoJ8SMghXspEQw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:lp/SfsKPbmVx01uyKBW7c2RprZw=,iv:MmneHS9wT4Zj7wrc5l5cVmWmKhh1jRNG2kWNWwHG2MA=,tag:wLaT7y2VBmrAYGEyTdFQvA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:rlYggyg8JhzyYDQ=,iv:RTN77lQBdKpdoPt1nYoQkC//1WuWCZe0D0vfphpFuAY=,tag:MDWScUPqtH8y+0x9+vlmXQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:+qzLEZcmX5cKXTEr2Ewt,iv:nf6m8CINiSpFEv1tWNC0l+MbLhkkpao1QuJWB0dZRAY=,tag:JRA6Ajce2tRzKyNmvKby1A==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:pbX9Q9SHwBsbRNQ/xZejoo28xsbBuU/MGw==,iv:vNMnxniJiryWoWS5nnG4HW4Qsk3j/iPcKM66dt74x7o=,tag:XaWYYDoBgk2zvLUDwJC5Kw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:DN/W8X4fSYb8qDkAExGkAgj0Oc8Vdcft,iv:0rJ/LKZISnibrCAcotXdNfdj0Wt+sGrWaJd56QYQpu0=,tag:12jzV+oMh02SZa2lr9MxKQ==,type:str]
-    #ENC[AES256_GCM,data:5a+WHT2EiKuMfpJ1WEo=,iv:k6Tgee23uAm7x3isRDfISrnzDXvdjuJ3oq5aAHHaDew=,tag:Hfs+SQQwQ/tzDx3pSkP0YQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:QoUxt3UgaBWCb1h6ZA==,iv:dfK1W49/9w3Eu+9a0rmqFBwBDabp9hOXKzq/zl4pi94=,tag:QLDC8biLlHm8Cm7cm7Ls3Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:f2+Yp6XV7o8ska0YzA==,iv:3VxSukGsFrTnXub6pWIkhfpX9N1lqKedkaShdaSV6DU=,tag:U7/kO/XIDcl59LIAxZGw8w==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:+6HN/g==,iv:I/apkgv2mFKt38dUDWIbzVFNR9sEvYuMNoDPem4k7QM=,tag:ZwKmKAN7VBm0XpUI0Utqeg==,type:str]
+    #ENC[AES256_GCM,data:eNmwLwTgjJYLlKuYJQupbnU8LWf99t30bWYbltjhrD5eCJwX3t/Qi99Ff1bPnabxwonUCj9IdmSKIIfAHSCaeqI=,iv:FV/SsbaOYbfrBQH9pbTXMTWRzIlLEtfrlo1vNE7rb64=,tag:ULTeQlqq7lcXqovu+8RbEQ==,type:comment]
+    #ENC[AES256_GCM,data:aJ48VBbEeGcdHD+1asMg2HK0eT/D78E/etQWCCcQFy9VrnT8pL+uPIdVYCo=,iv:Yt6lJgecSbxTYYYExKqlu8Plkd0FojHcabxLQm2QK/Y=,tag:9/yx+9QKAILcWdzzUYLTDw==,type:comment]
+    VIP: ENC[AES256_GCM,data:cNbwxBN5gnT0CCLBow==,iv:wxvZrdJ9o11Ugdt0/Wn/gMZYtr8014Vv7MOdzLaExK4=,tag:b+tg6PaMSdMF5gfE+8/Jaw==,type:str]
+    #ENC[AES256_GCM,data:HxeF7zzqChxsJBR5TuHtwkyqsYST4pkyAsXE,iv:AlNvJAsEKSZ6Iez12WXBFASx+kKz9ybo19hqyqZ/P8c=,tag:HYcOETfCv7lNeKEjVM114A==,type:comment]
+    #ENC[AES256_GCM,data:cDjS0efwY+ceAnJpCcNtwv4XXzqb651yKwUg9SdNQ7UPXG3TLherSNdp05Z+vcK0q3w4az0cB0S73wsldUsEVqGlRpX5ZX0JcLTkUJ9+S2Kj3cxt0oq47zk=,iv:hXzFdXRWGlj0s1jhxZbGeG9dr9tExHHBRloVlDo8ZkM=,tag:TDwIK8ACgK+B3hqOICuBQA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Gnso6tgMUGejFik+Bj4=,iv:plZrtK6Mt3YUzAm80r/f5gnJUqNVA+EyHgcntTfYnjk=,tag:F60JazUGE+0++1tsRiXoeQ==,type:str]
+    #ENC[AES256_GCM,data:IjtWueKRDyhkNVKxLZSTfk2BESDEVDtN0o/D6oFxX/0CEw==,iv:JYRvxVZrOwBbsnHoFg+Yn2Wsb6OHFjxFtUwQN4Uwa6k=,tag:KbHq/6vF/8YKzYtBJx3cCg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:USn05Ldm9EmzsjBLww==,iv:9TYijODvIIKn/PzquL5h76sKmktc/eIf+apV3g3y0P4=,tag:T1B2Vg58grJwbMnbY/C+SQ==,type:str]
+    #ENC[AES256_GCM,data:ny1SA7fHSe+sblXGyETbdzQ2MfIYmsGukrAKW5nEpDXaPRzx+IMWTmIAaikjY/Q=,iv:tTCl4arHO/rFshrClzf4uDm4BLPYC6BPXbVEEh1syw8=,tag:hcoHxxWAyIa6dpyVnBJ94Q==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:EdmsEEn2LXmp8p3xsQAqtRS0omVLAk8G0sSR4R5ODw==,iv:O+9yHxLsIBiLKqKPIDn6tr2y3RzYYMMAXQf8rvG+BH0=,tag:hSULbJiovqJT38rnZFWXcQ==,type:str]
+    #ENC[AES256_GCM,data:5YjwwfRHYUstJXeg8sicDiPXakmvquGIlZ0W9yGKdjKkc7RgmdpNzekASJmeUqD/A6tW6fa/XwOiIkWj4DP+GytFUTLj32qXLC2/SWHVAo5INg==,iv:KDltBRgXH/4fBu81TvYf/WL+E8Es4O3BtrYGcJYa2cI=,tag:f6kMz+5doSUQcUWO11tWIA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:Czx8/LMP0bL+3MMA7qp3,iv:vDjIbtr7RTAvnBijP0oIeLCOnTa9Mfit7ulQ3qJQ0xQ=,tag:wyk9gRQaW3LOooCHCCKZdw==,type:str]
+    #ENC[AES256_GCM,data:xvyC7QVRLSas6RzX4FdiS82fJEQtPehrSNefR2Z1UqTf,iv:XmYgcoVJvTerVrS9cXH6ptKYz17BukCXGcOoWXWjCoo=,tag:bO58c/Ibp0pOZ3QALiPRwg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:3NcxUuh7VcMlytPglUki,iv:0uIMPIp9/1hDbITNtUii5k3En1vZsNzX3xSqIvoSvmw=,tag:uYb54bdIMF6ofRErAcPVFw==,type:str]
+    #ENC[AES256_GCM,data:kHihAlIa8AX+Nk8q4eTP0sSExlCsZqA/fLOPMlc176Tlkl4Z0PBcGIYe9gkA1I4fTuGrN0UuAu4RQyH6+urCyk/l7rmBKIl+XbVZi0dB54o=,iv:UD1la865z9uaAM3fThGEGereYV2TQYc4goku3/iyqIs=,tag:M7ljXdEreBb7LvhQ2O2GyQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:xXR1s2Pwd4L9iAEZEFDB,iv:JP3zLUhOPaRIg8i7CXxB3SwtjHEe2aqjcBtUs71ipfQ=,tag:e4SWzfkWWMCTjAJbaNaGyQ==,type:str]
+    #ENC[AES256_GCM,data:Ko9MDlR62xl19LHNYTYdhogHK4thg6K5wbWwC3Y/JaVIkabKYFNxOgrRZLSagz6EqaVgZnzU/Zijps0pWS34VQJAnmvcZaQLwoUldl2D8rj3sQZxknHM,iv:DKGXKY3jtwZQo/48jIHFdDJm1i0xL/nAKFgiGXfSaXc=,tag:l13jjGFUgD2GB6/7T3JiMQ==,type:comment]
+    #ENC[AES256_GCM,data:VkQpX+u1cbak9Ft30aOLZPvj94Ypvaae2iMCe8uMOWEzhGXmMNKibuK6iaQkRpJ67noDbVtodfrsZE0wVEko5Pr7kYBHTsUPADOP6C/X9pni/O0F/J9NIXqKw4ILnhEAWXo/HZok800K7xN3AJJ7nISbdwN0Zvyi/C7gZA==,iv:U1yNVXtPcTSSlyksgIW2Rx0jb6wFdITRR+FedtIJ8Do=,tag:pP51dnwHyPvGhNLFJwm/4Q==,type:comment]
+    #ENC[AES256_GCM,data:Ri+IdbZQEt64v+UtS8USrE0HbvDOBlirCqfZBXfJqwM2sPoB7wBIPoxLh1hw6uJ9u6gfrEi1YxRRxfpHBPpjZe3D/2fPrCpTEb6Zg0gTSII=,iv:uuZnzV5W3p7VcIZqBIz4oj3s6Zuj2369/ZXq7AGH+J4=,tag:TQaY+IX2LWZwQm321XbMaQ==,type:comment]
+    #ENC[AES256_GCM,data:44B0AbhrNs2bpjAvED1LOqCkaQwPsT8OKxt9eDaQ4I5Azsi3AMmhBhpGKEIwfs+1yBXGKsmL,iv:iBNfEcFJWb0kW3qBD6Z8W/acqCiUx91XAgCkMYeUcAg=,tag:IrWtNrVpk1SDJmkV0lKK7A==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:U5PLW/25AuRJ1NtZ,iv:qmOUwRibEdpxbfiobX9uNoVFtbCDxp7k9usj1yGeRzE=,tag:E2ESci4+kRolLfmDsoy7qg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:QNT31gKOxbLi+FGpaeRiAqw=,iv:taINvsq1UYqvnCensbP5ryZfmKmbRlP1ndV7IbmjRVw=,tag:oyd9TWm7mxqNrJdByYRTkw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:hOZNByTnAqniBSqDSheY3TE1ZH1nabi8wO+yjgKTBIM=,iv:+/kojX+RTirpwMV2geaZ0zjzZQ6S7qsblccfXQM4oW4=,tag:VAy4BkR7XJ12uHEE4JIwxQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:rQz0QQLhsH7g3MZxBFXNJ0t7pZehJjMnSH9swcwvMHB1dKpubmdKDQ==,iv:yr9v1L8BnmFHZbTsx9lsN++5XkqEP95OTBx8ZyzLdX8=,tag:jrX94ffE+TUImsBph1EGVw==,type:str]
+    #ENC[AES256_GCM,data:AGHmh4uhFLNTMZ9dzM5q1og4op0aKTfoaMIy1N28g3TseV7Y1cZFVd7M/xDh9VS4zaMEbFTmyZ/u1+IhTBDiwQ==,iv:kSgcYtLSfArs6kw4kIXHmjedXSTlfTstu68S9MjkGjI=,tag:GVxctxl9cVWfAuXw440MLw==,type:comment]
+    #ENC[AES256_GCM,data:mgvf5hPhdn5TOhJl2T8jzs/Xxq7fQRgI6DUyyXyEsWouMYqMH9WWxZOYzw2/8W9HDq17SMNlBmM=,iv:F9evPiB/pvRufKuwoOvZLwsUpIB2UjQ9FccD1exqC94=,tag:A0kUXR8BgIc/vB/BJsJ5sQ==,type:comment]
+    #ENC[AES256_GCM,data:q7livAFGjNG7Sa7DG2dwQwPulRZbhO4VFQ==,iv:xX7zNHgw8RjOnNr+pXj8zR164tx9eLTkv6Dp+iVjhMY=,tag:99Duqiwg5lQbqJj4zm5TjA==,type:comment]
+    #ENC[AES256_GCM,data:LRwCc+jRLksOjCaZhxA9lB1pRIxOMAge0plUybgyC2hvL4u7+JY/VOfXR9ocwQsmE6dXQ6/PGzamJ4TZJSGVzqQxYJbN18pGnSvZXdU=,iv:QwKJylhZTk3xJXyZzQln+j9VMZWEVW+Z2RbF+O+AIEs=,tag:rUbiXUmNpqRoLZaA2hCAWQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:8UDUh021mMgyrI4WAbWmcIMVs0cv4HKaia/bz4ybpidHTS3rEYkYrzcVRLMXSByv,iv:bemgZc4rMDp2rbl95HqRQOzcedoD1ztGmeONKMXWyXU=,tag:4Bof2XcBpAIcQsLCef1V4A==,type:str]
+    #ENC[AES256_GCM,data:wS/mVWX5xZ4xANut/5VtBb3v9nDrhptZhXhhR20K7s3dX7Hv+VR22evMgDlgxLSGh6q3R/2igqJ9Any93ZnIcXoU/ls1Td8=,iv:9MWDyDx4CY651ZdDghaszHm8n9DLliYuEVl4/xC1beM=,tag:/a6zf99DjuAze86BL6qHyg==,type:comment]
+    #ENC[AES256_GCM,data:O86We+JNYFHHDhYvc5KHp6nSOKJ1dM+iYgOwYDN22LOu1+D4Mku1NIIoe3XPO5ItyqKRaNhm,iv:Q80bGku7p8FmFGYF4e8gg3yw7jVOX4obnCXIzKPjioM=,tag:IlY8RXE8phRmE11ys1CJ6g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:DUQK7Y6dKw==,iv:vJKlTOMWHZUo3oNkTZqFrEwi7ngNbPU7yntVzB/36MA=,tag:HUhd5NUMwVARfThCqhWlLw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:J9APS/N7LBRQFLDduqCcBVJs+Hw=,iv:cLLDYCOnk+CfjznazZWeBZyLE3vfQnlmfwdnRiO3z/Q=,tag:FclIBkorsYqC6SNRY3rAlA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:xHbOCIuut0S6sD0=,iv:+lbzDj01dkQl8t+Ruylmnlck+iIwIdMudXI+sXJzR38=,tag:oSUjsHM1ySn1MhJUU5/amQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:R6glIe8qaxzk1dJRUwYT,iv:Xem8TCWX3TQOAPpFOkf0j+w9Ees7f8EoRHgko2Ag6t0=,tag:IBR2Ce0K8UznzmTyaYDkCQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:VGWdZKBNf48tAkUZLIe/ZyLDaYEe0gEzxA==,iv:qMU+VvSSsvRpesECi8LkbWZOkBdOT7U3727DIEOd/0Y=,tag:x4HTuqIjCXG0bN/OtYHSyw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:ru4WMtqfLdvFDdWUMvMAuMvpiN8bJjEl,iv:nu85IbP6O2N86MFUC12snrSEaDBuFbWSQhpuUKTjO6I=,tag:h3iPGnP3bWljOzWU0BvVVw==,type:str]
+    #ENC[AES256_GCM,data:Om9Q1y5vZvEY7oZ/M3E=,iv:/U00NuQG3hRvx/5vYXuKCsQi8ItUVr7w+MhW316/iic=,tag:pRKgo8eWoC61iGci6CqaTw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:20SBg0P/J1Fw2PBI0w==,iv:P2GNCNn3QTcBHZIkhrJvSpYFiTYMxzL8mtBPmLgnNpE=,tag:hYqKYN+g/81L9YfqkSesVg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:Nj9ll2Z8pCacjvjx5g==,iv:2RoJePGRd7HGPfsCjzKkb5a1asKPExsuCa37HC0QPj4=,tag:jJbf2+mnXexni8wA2xliJA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:kOkS0w==,iv:zoc6MB3/4vxXvOPApV9rHtkZPyUcFToclt0N16zEGc0=,tag:lRzmWgHxJhR3OmjFHG8i4Q==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -55,14 +55,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTNmJ6ZWlIbnpCa0JjRm5a
-            c3NHSFRLbERkZExWdmJtVEpDTFgxNmhYMG00CjBpUjFuMTBQV2VYV1g5U01oTDhU
-            Q01pSFVMZ2M2My9oNlJoWXpzbnBBUzAKLS0tIGdVOXZOMUhvdkRvaFVoZFBTYUNL
-            U2RFZ2JFL0J2WDU0Ukl0aXd3L1NiUEUK5AUI8NmZsJHI1bsyBEIbdLCcrwtwPOrW
-            ryeS1egNGEMDArgs41AHPOhPaByNDbF7nm2KK061P8qwHBvKm/8lAQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMbjhpNUdGKzlkNVVGeUpK
+            Yk9iQUtydHpJaHpmVWdSNGwzOXVzcmgxU0RrCjRlYmxKdVloZUZLODRsOGxoSjcw
+            Rmoxa280MkFPUUZMWWVNRmZxb20vKzAKLS0tIDMvL2trMmxWMXhqcjJKODllRTNj
+            RDIxQzNWbUtyaEk0VGcrZm1mZDVCZ3cKhiHOphK5suDJNF7F8cvQDDP2DS3j0xd0
+            n/JJ1p+oLC4rWO0sXXAPQaBlon2ZGB6C6q7WLXFXtiP7mf7pXpwR1A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-05T23:38:38Z"
-    mac: ENC[AES256_GCM,data:65YAuLvZMm3jRmTb6MhvOFvKPYtmwxnMoKrsTMvcyx9Xqzdm/m6lvEdbbCNLaKAurndSjnBek/2gg63EpaW2O7VYgVLq4krop0f6I6BR92QAk1dk0L5zAG6LwdnzrNplsni3rdEoLpOOQtjd9fmzFKIvOPaq2LkOv5Iv2fcvlA8=,iv:uuIgEP8zL4LviEz+GMOATvGSCcVO6uj7mOYb5Mqzx84=,tag:0TR+5PrkI9gFupoJ58rKBA==,type:str]
+    lastmodified: "2025-01-08T22:38:18Z"
+    mac: ENC[AES256_GCM,data:UfyeSPxS8A1MUBOHwtFe0PBDP93i2jwTxWus4R4AHIYSmY7Pbh5m4HXlr452O2gwtij9+USa2WkDACXq9HVpYbkGe84S84cIRtCl+GVjLocxWbt0r7c5jk/kT1IFaTqn8UnAjFtd4CTcAnJ3mRAF/FIqGSRMIfgqDp/FXt6atgY=,iv:s6oWG68NZ4n4DQGKaeCIhvMbOKdfZrEk/kwFm3wDzyY=,tag:rb3cnbaSkZnWgrd9O/9ejg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
